# MS

./: .gitignore  AIStableDiffusion.key  README.md
FishingBoatsAnomalyDetection/: README.md  pyproject.toml
FishingBoatsAnomalyDetection/data_sample/: trajectories.csv
FishingBoatsAnomalyDetection/fishingboatsprediction/: main.py
FishingBoatsAnomalyDetection/fishingboatsprediction/configs/: default_config.yaml
FishingBoatsAnomalyDetection/fishingboatsprediction/datasets/: AISPreprocessor.py  FishingAISDataset.py
FishingBoatsAnomalyDetection/fishingboatsprediction/models/: AIStableDiffusion.py  __init__.py
FishingBoatsAnomalyDetection/fishingboatsprediction/notebooks/: 02_ExtendedKalmanFilter_241226.ipynb  AEKF_tests.ipynb  cnn.ipynb  data_extraction.ipynb  dataset_plot.ipynb  distribution.ipynb  loitering_classification.ipynb  loitering_classification_prep.ipynb  visualization_container_trajectories.ipynb  visualize_group_voyage.py  visualize_single_voyage.py
FishingBoatsAnomalyDetection/fishingboatsprediction/notebooks_before_June9/: 1_sampled_visualizations.ipynb  1_simple_anomalies.ipynb  1_visualizations.ipynb  Fishing_boats_filtering.ipynb  resampling.ipynb
FishingBoatsAnomalyDetection/fishingboatsprediction/trainers/: AIStableDiffusionTrainer.py
FishingBoatsPrediction/: .gitignore  README.md  pyproject.toml
FishingBoatsPrediction/fishingboatsprediction/: main.py  utils.py
FishingBoatsPrediction/fishingboatsprediction/configs/: configs.py  default_config.yaml  test_config.yaml
FishingBoatsPrediction/fishingboatsprediction/datasets/: AISPreprocessor.py  FishingAISDataset.py  TrAISformerDataset.py
FishingBoatsPrediction/fishingboatsprediction/models/: AIStableDiffusion.py  TrAISformer.py
FishingBoatsPrediction/src/: default_config.yaml  main.py
GeoTrackNet/: pyproject.toml
TrAISformer/: pyproject.toml
TrAISformer/jupyter_notebooks/: test.ipynb
TrAISformer/src/: config.py  config.yaml  dataset.py  main.py  models.py
TrAISformer/src_old/: trainers.py
(+17 files in other folders)
