[tool.poetry]
name = "fishingboatsprediction"
version = "0.1.0"
description = ""
authors = ["Ukhatov Alexander <alexander.ukhatov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
plotly = "^5.24.1"
nbformat = "^5.10.4"
clearml = "^1.17.1"
numpy = "1.26.4"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
